<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">tourpost</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_for_you">For you.</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_delhi">Delhi.</string>
    <string name="msg_how_to_enjoy_no">How to enjoy Noida </string>
    <string name="lbl_20">20</string>
    <string name="lbl_pachke_hai_bhai">Pachke hai bhai</string>
    <string name="lbl_suggested">Suggested</string>
    <string name="lbl_shaheen_bagh">Shaheen Bagh</string>
    <string name="lbl_czech">czech.</string>
    <string name="lbl_popular_8">Popular (8)</string>
    <string name="msg_this_list_would">This list would shock and excite you as we compile together places that are forbidden even for the brave hearted...</string>
    <string name="lbl_550_rep">550 REP</string>
    <string name="msg_see_you_tomorro">See you tomorrow.</string>
    <string name="lbl_share2">Share</string>
    <string name="lbl_tamish_sinha">-Tamish Sinha</string>
    <string name="lbl_follow">Follow</string>
    <string name="msg_aurangabad_is_g">Aurangabad is great.</string>
    <string name="lbl_give_rep">Give REP</string>
    <string name="msg_planning_a_mana">Planning a Manali Trip?</string>
    <string name="lbl_noida2">Noida</string>
    <string name="lbl_gujjar_chat">Gujjar Chat</string>
    <string name="lbl_zurich">zurich.</string>
    <string name="lbl_gurgaon">Gurgaon</string>
    <string name="lbl_new_delhi_ncr">New Delhi NCR</string>
    <string name="lbl_lajpat_nagar">Lajpat Nagar</string>
    <string name="lbl_1_hour_ago">1 hour ago</string>
    <string name="lbl_share">share.</string>
    <string name="lbl_search">Search </string>
    <string name="msg_sooraj_aggarwa">-Sooraj Aggarwal </string>
    <string name="lbl_220_followers">220 Followers</string>
    <string name="lbl_faridabad">Faridabad</string>
    <string name="lbl_go_to_maps">Go to maps.</string>
    <string name="lbl_150_following">150 Following</string>
    <string name="lbl_125">125</string>
    <string name="lbl_instagram">Instagram</string>
    <string name="msg_why_people_shou">Why people shouldn\u2019t visit Gurgaon</string>
    <string name="lbl_posts_49">Posts (49)</string>
    <string name="lbl_berlin">berlin.</string>
    <string name="lbl_great_yaar">Great yaar</string>
    <string name="lbl_guide_2">Guide #2</string>
    <string name="lbl_thanh_pham">Thanh Pham</string>
    <string name="lbl_hello_from_me">Hello from me.</string>
    <string name="lbl_guide_3">Guide #3</string>
    <string name="lbl_must_visit">Must Visit.</string>
    <string name="lbl_following">Following</string>
    <string name="lbl_guide_1">Guide #1</string>
    <string name="lbl_imessages">iMessages</string>
    <string name="lbl_verified_local">verified local</string>
    <string name="lbl_community">Community</string>
    <string name="lbl_guide_6">Guide #6</string>
    <string name="lbl_gordon_ramji">Gordon Ramji</string>
    <string name="lbl_noida">noida.</string>
    <string name="lbl_guide_4">Guide #4</string>
    <string name="lbl_guide_5">Guide #5</string>
    <string name="msg_manali_is_a_rus">Manali is a rustic enclave known for its cool climate and snow-capped mountains ...</string>
    <string name="lbl_destination">Destination</string>
    <string name="lbl_inbox">inbox.</string>
    <string name="lbl_150">150</string>
    <string name="msg_home_to_one_of">Home to one of the World\u2019s Eight Wonders, Mayawati Park, a massacre, Noida is a tax haven. Know why... </string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
</resources>
