<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="inboxVM" type="com.tourpost.app.modules.inbox.data.viewmodel.InboxVM"/>
    </data>
    <FrameLayout android:id="@+id/frameInbox"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStyleblack_900">
        <LinearLayout android:id="@+id/linearColumnarrowleft"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearRowarrowleft"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageButton
                        android:background="@drawable/rectangle_bg_gray_900_b2_radius_6"
                        android:id="@+id/btnArrowleft"
                        android:layout_height="@dimen/_28pxh"
                        android:layout_width="@dimen/_28pxh"
                        android:paddingHorizontal="@dimen/_4pxh"
                        android:paddingVertical="@dimen/_4pxv"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_arrowleft" tools:ignore="ContentDescription"/>
                    <ImageView android:id="@+id/imageSend"
                        android:layout_height="@dimen/_21pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_11pxh"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_width="@dimen/_21pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_send_21x21"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_send_21x21"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtInbox"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_19pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.59"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{inboxVM.inboxModel.txtInbox}"
                        style="@style/txtLeagueSpartanbold27" tools:text="@string/lbl_inbox"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <androidx.appcompat.widget.SearchView
                android:background="@drawable/rectangle_bg_gray_100_7f_radius_10"
                android:gravity="center_horizontal"
                android:id="@+id/searchViewSearchbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_31pxv"
                android:layout_width="match_parent"
                android:theme="@style/searchViewSearchbar"
                app:iconifiedByDefault="false"
                app:queryBackground="@android:color/transparent" app:queryHint="@string/lbl_search"/>
            <androidx.recyclerview.widget.RecyclerView
                android:gravity="center_horizontal"
                android:id="@+id/recyclerInbox"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_28pxv"
                android:layout_width="match_parent"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                itemSpace="@{@dimen/_26pxh}" tools:itemCount="5" tools:listitem="@layout/row_inbox"/>
            <FrameLayout android:id="@+id/frameStackuserFive"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_138pxv"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_23pxv" android:layout_width="@dimen/_358pxh">
                <ImageView android:id="@+id/imageUserFive"
                    android:layout_gravity="bottom|end"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_36pxh"
                    android:layout_marginStart="@dimen/_36pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="@dimen/_14pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_user"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
                <ImageView android:id="@+id/imageGrid"
                    android:layout_gravity="bottom|start"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginEnd="@dimen/_95pxh"
                    android:layout_marginStart="@dimen/_95pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_grid"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_grid"/>
                <ImageView android:id="@+id/imageAlarm"
                    android:layout_gravity="bottom|end"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginEnd="@dimen/_98pxh"
                    android:layout_marginStart="@dimen/_98pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="@dimen/_17pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_alarm"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_alarm"/>
                <View android:background="@color/indigo_A100"
                    android:id="@+id/lineLineOne"
                    android:layout_gravity="bottom|start"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_40pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_40pxv" android:layout_width="@dimen/_147pxh"/>
                <LinearLayout android:id="@+id/linearColumnlinetwo"
                    android:layout_gravity="bottom|end"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_40pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_40pxv"
                    android:layout_width="wrap_content" android:orientation="vertical">
                    <View android:background="@color/indigo_A100"
                        android:id="@+id/lineLineTwo"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_1pxv" android:layout_width="@dimen/_139pxh"/>
                    <View android:background="@color/indigo_A100"
                        android:id="@+id/lineLineFour"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginEnd="@dimen/_13pxh"
                        android:layout_marginStart="@dimen/_13pxh" android:layout_width="@dimen/_30pxh"/>
                </LinearLayout>
                <ImageView android:id="@+id/imageHome"
                    android:layout_gravity="bottom|start"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="@dimen/_19pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_home"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_home"/>
                <FrameLayout android:id="@+id/frameStackguidesix"
                    android:layout_gravity="top|center"
                    android:layout_height="@dimen/_123pxv"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_9pxh"
                    android:layout_marginStart="@dimen/_10pxh" android:layout_width="@dimen/_339pxh">
                    <LinearLayout android:id="@+id/linearRowguidesix"
                        android:layout_gravity="top|start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:orientation="horizontal" style="@style/groupStylegray_903cornerRadius">
                        <LinearLayout android:gravity="start"
                            android:id="@+id/linearColumnguidesix"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_16pxv"
                            android:layout_marginStart="@dimen/_73pxh"
                            android:layout_marginTop="@dimen/_9pxv"
                            android:layout_weight="0.94"
                            android:layout_width="0dp" android:orientation="vertical">
                            <TextView android:ellipsize="end"
                                android:id="@+id/txtGuideSix"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/_10pxh"
                                android:layout_width="wrap_content"
                                android:singleLine="true"
                                android:text="@{inboxVM.inboxModel.txtGuideSix}"
                                style="@style/txtLeagueSpartanbold16" tools:text="@string/lbl_guide_6"/>
                            <TextView android:ellipsize="end"
                                android:id="@+id/txtGreatyaar"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/_10pxh"
                                android:layout_marginTop="@dimen/_14pxv"
                                android:layout_width="wrap_content"
                                android:singleLine="true"
                                android:text="@{inboxVM.inboxModel.txtGreatyaar}"
                                style="@style/txtLeagueSpartanregular16" tools:text="@string/lbl_great_yaar"/>
                        </LinearLayout>
                        <ImageView android:id="@+id/imageCameraFive"
                            android:layout_height="@dimen/_13pxh"
                            android:layout_marginBottom="@dimen/_27pxv"
                            android:layout_marginEnd="@dimen/_16pxh"
                            android:layout_marginTop="@dimen/_32pxv"
                            android:layout_width="@dimen/_15pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_camera_13x15"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_camera_13x15"/>
                    </LinearLayout>
                    <ImageButton
                        android:background="@drawable/rectangle_gradient_s_indigo_a100_e_indigo_500_radius_29_5"
                        android:id="@+id/btnGroupTwo"
                        android:layout_gravity="bottom|center"
                        android:layout_height="@dimen/_60pxh"
                        android:layout_marginEnd="@dimen/_136pxh"
                        android:layout_marginStart="@dimen/_136pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="@dimen/_59pxh"
                        android:paddingHorizontal="@dimen/_19pxh"
                        android:paddingVertical="@dimen/_19pxv"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_group19" tools:ignore="ContentDescription"/>
                </FrameLayout>
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
